<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragment.ProfileFragment"
    android:background="#ffffff">

    <TextView
        android:id="@+id/txtProfileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:padding="10dp"/>

    <ImageView
        android:id="@+id/imgProfilePic"
        android:layout_width="181dp"
        android:layout_height="129dp"
        android:layout_below="@+id/txtProfileFragment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:scaleType="fitCenter"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/txtProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ashok_ranera"
        android:layout_below="@+id/imgProfilePic"
        android:textSize="25dp"
        android:textColor="#000000"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/txtProfileQualifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BE in CE"
        android:layout_below="@+id/txtProfileName"
        android:textSize="20dp"
        android:textColor="#616161"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>


    <TextView
        android:id="@+id/txtSocialAccountInstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instagram_id_ranera_ashok"
        android:layout_below="@+id/txtProfileQualifications"
        android:textSize="20dp"
        android:textColor="#37474f"
        android:textStyle="normal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txtSocialAccountLinkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linkedin_id_ashok_ranera"
        android:layout_below="@+id/txtSocialAccountInstagram"
        android:textSize="20dp"
        android:textColor="#37474f"
        android:textStyle="normal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>


    <TextView
        android:id="@+id/txtSocialAccountGitHub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_id_ashok_ranera"
        android:layout_below="@+id/txtSocialAccountLinkedin"
        android:textSize="20dp"
        android:textColor="#37474f"
        android:textStyle="normal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>





</RelativeLayout>